custom main handler code generator
