# lambda/public/openapi.json
@@ -1,1 +1,481 @@
-{"openapi":"3.0.0","servers":[{"url":"http://localhost:3000"}],"info":{"title":"What up !","version":"1.0.0"},"paths":{"/auth/login":{"post":{"tags":["auth"],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/AuthLoginReqBodySchema"}}}},"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/JwtSchema"}}}},"401":{"description":""}}}},"/auth/signup":{"post":{"tags":["auth"],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/AuthSignupReqBodySchema"}}}},"responses":{"200":{"description":"Success signup"}}}},"/auth/refresh":{"post":{"security":[{"bearerAuth":[]}],"tags":["auth"],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/JwtSchema"}}}}}}},"/user/profile":{"get":{"security":[{"bearerAuth":[]}],"tags":["user"],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/UserProfileResBodySchema"}}}}}}},"/user/{id}":{"delete":{"security":[{"bearerAuth":[]}],"tags":["user"],"zodPathParamsSchema":{"_def":{"unknownKeys":"strip","catchall":{"_def":{"typeName":"ZodNever"}},"typeName":"ZodObject"},"_cached":null},"responses":{"200":{"description":""}},"parameters":[{"name":"id","in":"path","required":true,"schema":{"type":"string"}}]}},"/job":{"get":{"tags":["job"],"zodQueryParamsSchema":{"_def":{"unknownKeys":"strip","catchall":{"_def":{"typeName":"ZodNever"}},"typeName":"ZodObject"},"_cached":null},"responses":{"200":{"description":"Job by Id","content":{"application/json":{"schema":{"$ref":"#/components/schemas/FindManyJobsPageResSchema"}}}}},"parameters":[{"name":"page","in":"query","schema":{"type":"number","default":1,"description":"Page Number"}},{"name":"pageSize","in":"query","schema":{"type":"number","default":10,"description":"Page Size"}},{"name":"pageTotalCount","in":"query","schema":{"type":"boolean","default":false,"description":"Retrieve total Count of Pages"}},{"name":"jobListId","in":"query","schema":{"type":"string"}}]}}},"components":{"securitySchemes":{"bearerAuth":{"type":"http","scheme":"bearer","bearerFormat":"JWT"}},"schemas":{"JwtSchema":{"type":"object","properties":{"accessToken":{"type":"string","minLength":5},"refreshToken":{"type":"string","minLength":5}},"required":["accessToken","refreshToken"],"additionalProperties":false},"AuthLoginReqBodySchema":{"type":"object","properties":{"email":{"type":"string","format":"email"},"password":{"type":"string","minLength":6}},"required":["email","password"],"additionalProperties":false},"AuthSignupReqBodySchema":{"type":"object","properties":{"email":{"type":"string","format":"email"},"password":{"type":"string","minLength":8},"firstName":{"type":"string","minLength":2},"lastName":{"type":"string","minLength":2}},"required":["email","password","firstName","lastName"],"additionalProperties":false},"UserProfileResBodySchema":{"type":"object","properties":{"id":{"type":"string","format":"uuid"},"email":{"type":"string","format":"email"},"firstName":{"type":"string","minLength":2},"lastName":{"type":"string","minLength":2},"role":{"type":"string","enum":["admin","user"]}},"required":["id","email","firstName","lastName","role"],"additionalProperties":false},"FindManyJobsPageResSchema":{"type":"object","properties":{"pageInfo":{"type":"object","properties":{"currentPage":{"type":"number","description":"Current page number"},"currentPageSize":{"type":"number","description":"Requested page size"},"currentPageCount":{"type":"number","description":"number Actual item/result count count of the current page"},"totalPageCount":{"type":"number","description":"number Total number of pages([pageTotalCount] query param must be set to `true` within your request)"},"totalCount":{"type":"number","description":"number Total item count ([pageTotalCount] query param must be set to true within your request)"}},"required":["currentPage","currentPageSize","currentPageCount"],"additionalProperties":false},"items":{"type":"array","items":{"type":"object","properties":{"id":{"type":"string","format":"uuid"},"title":{"type":"string"},"company":{"type":"string"},"location":{"type":"string"},"url":{"type":"string"},"salary":{"type":"string"},"description":{"type":"string"},"color":{"type":"string"},"jobListRank":{"type":"number"},"jobListId":{"type":"string","format":"uuid"},"userId":{"type":"string","format":"uuid"}},"required":["id","title","company","jobListRank","jobListId","userId"],"additionalProperties":false}}},"required":["pageInfo","items"],"additionalProperties":false}}}}
+{
+  "openapi": "3.0.0",
+  "info": {
+    "title": "What up !",
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:3000"
+    }
+  ],
+  "paths": {
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AuthLoginReqBodySchema"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/JwtSchema"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": ""
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "payloadFormatVersion": "2.0",
+          "type": "AWS_PROXY",
+          "uri": "${lambda_arn}"
+        }
+      }
+    },
+    "/auth/signup": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AuthSignupReqBodySchema"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success signup"
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "payloadFormatVersion": "2.0",
+          "type": "AWS_PROXY",
+          "uri": "${lambda_arn}"
+        }
+      }
+    },
+    "/auth/refresh": {
+      "post": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "auth"
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/JwtSchema"
+                }
+              }
+            }
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "payloadFormatVersion": "2.0",
+          "type": "AWS_PROXY",
+          "uri": "${lambda_arn}"
+        }
+      }
+    },
+    "/user/profile": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "user"
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserProfileResBodySchema"
+                }
+              }
+            }
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "payloadFormatVersion": "2.0",
+          "type": "AWS_PROXY",
+          "uri": "${lambda_arn}"
+        }
+      }
+    },
+    "/user/{id}": {
+      "delete": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "user"
+        ],
+        "zodPathParamsSchema": {
+          "_def": {
+            "unknownKeys": "strip",
+            "catchall": {
+              "_def": {
+                "typeName": "ZodNever"
+              }
+            },
+            "typeName": "ZodObject"
+          },
+          "_cached": null
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "payloadFormatVersion": "2.0",
+          "type": "AWS_PROXY",
+          "uri": "${lambda_arn}"
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/job": {
+      "get": {
+        "tags": [
+          "job"
+        ],
+        "zodQueryParamsSchema": {
+          "_def": {
+            "unknownKeys": "strip",
+            "catchall": {
+              "_def": {
+                "typeName": "ZodNever"
+              }
+            },
+            "typeName": "ZodObject"
+          },
+          "_cached": null
+        },
+        "responses": {
+          "200": {
+            "description": "Job by Id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResOfJobSchema"
+                }
+              }
+            }
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "payloadFormatVersion": "2.0",
+          "type": "AWS_PROXY",
+          "uri": "${lambda_arn}"
+        },
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "schema": {
+              "type": "number",
+              "default": 1,
+              "description": "Page Number"
+            }
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "schema": {
+              "type": "number",
+              "default": 10,
+              "description": "Page Size"
+            }
+          },
+          {
+            "name": "pageTotalCount",
+            "in": "query",
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "description": "Retrieve total Count of Pages"
+            }
+          },
+          {
+            "name": "jobListId",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/job/{id}": {
+      "get": {
+        "tags": [
+          "job"
+        ],
+        "responses": {
+          "200": {
+            "description": "Job by Id"
+          }
+        },
+        "x-amazon-apigateway-integration": {
+          "httpMethod": "POST",
+          "payloadFormatVersion": "2.0",
+          "type": "AWS_PROXY",
+          "uri": "${lambda_arn}"
+        }
+      }
+    }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
+    "schemas": {
+      "JwtSchema": {
+        "type": "object",
+        "properties": {
+          "accessToken": {
+            "type": "string",
+            "minLength": 5
+          },
+          "refreshToken": {
+            "type": "string",
+            "minLength": 5
+          }
+        },
+        "required": [
+          "accessToken",
+          "refreshToken"
+        ],
+        "additionalProperties": false
+      },
+      "AuthLoginReqBodySchema": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "minLength": 6
+          }
+        },
+        "required": [
+          "email",
+          "password"
+        ],
+        "additionalProperties": false
+      },
+      "AuthSignupReqBodySchema": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email"
+          },
+          "password": {
+            "type": "string",
+            "minLength": 8
+          },
+          "firstName": {
+            "type": "string",
+            "minLength": 2
+          },
+          "lastName": {
+            "type": "string",
+            "minLength": 2
+          }
+        },
+        "required": [
+          "email",
+          "password",
+          "firstName",
+          "lastName"
+        ],
+        "additionalProperties": false
+      },
+      "UserProfileResBodySchema": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "email": {
+            "type": "string",
+            "format": "email"
+          },
+          "firstName": {
+            "type": "string",
+            "minLength": 2
+          },
+          "lastName": {
+            "type": "string",
+            "minLength": 2
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "admin",
+              "user"
+            ]
+          }
+        },
+        "required": [
+          "id",
+          "email",
+          "firstName",
+          "lastName",
+          "role"
+        ],
+        "additionalProperties": false
+      },
+      "PageResOfJobSchema": {
+        "type": "object",
+        "properties": {
+          "items": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string",
+                  "format": "uuid"
+                },
+                "title": {
+                  "type": "string"
+                },
+                "company": {
+                  "type": "string"
+                },
+                "location": {
+                  "type": "string"
+                },
+                "url": {
+                  "type": "string"
+                },
+                "salary": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "color": {
+                  "type": "string"
+                },
+                "jobListRank": {
+                  "type": "number"
+                },
+                "jobListId": {
+                  "type": "string",
+                  "format": "uuid"
+                },
+                "userId": {
+                  "type": "string",
+                  "format": "uuid"
+                }
+              },
+              "required": [
+                "id",
+                "title",
+                "company",
+                "jobListRank",
+                "jobListId",
+                "userId"
+              ],
+              "additionalProperties": false
+            }
+          },
+          "pageInfo": {
+            "type": "object",
+            "properties": {
+              "currentPage": {
+                "type": "number",
+                "description": "Current page number"
+              },
+              "currentPageSize": {
+                "type": "number",
+                "description": "Requested page size"
+              },
+              "currentPageCount": {
+                "type": "number",
+                "description": "number Actual item/result count count of the current page"
+              },
+              "totalPageCount": {
+                "type": "number",
+                "description": "number Total number of pages([pageTotalCount] query param must be set to `true` within your request)"
+              },
+              "totalCount": {
+                "type": "number",
+                "description": "number Total item count ([pageTotalCount] query param must be set to `true` within your request)"
+              }
+            },
+            "required": [
+              "currentPage",
+              "currentPageSize",
+              "currentPageCount"
+            ],
+            "additionalProperties": false
+          }
+        },
+        "required": [
+          "items",
+          "pageInfo"
+        ],
+        "additionalProperties": false
+      }
+    }
+  }
+}
